# ello-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README-zh.md  README.md  docker-compose.dev.yaml  docker-compose.local.yaml  docker-compose.observability.yaml  docker-compose.prod.yaml  docker-compose.test.yaml
backend/: .env.example  AGENTS.md  CLAUDE.md  Dockerfile  README-zh.md  README.md  pyproject.toml
backend/.claude/skills/errorcode/: SKILL.md
backend/alembic/: env.py
backend/alembic/versions/: 10831e8e5fc8_init_users_table.py  a1b2c3d4e5f6_create_iam_tables.py  b2c3d4e5f6a1_seed_iam_data.py  c3d4e5f6a1b2_backfill_users_to_principals.py  d4e5f6a1b2c3_drop_legacy_users_table.py  e5f6a1b2c3d4_rewrite_single_user_product.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py  errors.py  router.py
backend/app/api/routes/: __init__.py  debug.py  health.py  sessions.py  user.py
backend/app/api/schemas/: __init__.py  common.py  session.py  (+1 more)
backend/app/application/: __init__.py
backend/app/core/: __init__.py  auth.py  auth_ctx.py  clock.py  config.py  constants.py  database.py  exception.py  exceptions.py  ids.py  json.py  logger.py  logging.py  observability.py  redis.py  result.py  schema.py  types.py
backend/app/domain/: __init__.py
backend/app/infra/: __init__.py
backend/app/model/: __init__.py  user.py
backend/app/modules/: __init__.py
backend/app/repository/: __init__.py  user.py
backend/app/router/: __init__.py  auth.py  user.py
backend/app/runtime/: __init__.py  app_runtime.py  container.py  lifecycle.py  state.py
backend/app/schema/: __init__.py  user.py
backend/app/service/: __init__.py  user.py
backend/app/tools/: __init__.py  openapi_gen.py  scripts.py
backend/app/utils/: __init__.py  auth.py  security.py
backend/ello_bot/: __init__.py  main.py
backend/tests/: conftest.py  factories.py  test_ai_sdk_anthropic_provider.py  test_ai_sdk_client.py  test_ai_sdk_gemini_provider.py  test_ai_sdk_openai_provider.py  test_auth.py  test_service_user.py  test_user.py  test_utils_auth.py
(+479 files in other folders)
